--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,24 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  username: <%= Rails.application.credentials.dig(:database, :username)  %>
+  password: <%= Rails.application.credentials.dig(:database, :password) %>
+  host: <%= ENV.fetch("POSTGRES_HOST") { "localhost" } %>
+  port: 5432
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
+# I had to create roles for dev and test
 development:
   <<: *default
-  database: storage/development.sqlite3
+  username: postgres
+  database: simple_chat_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: simple_chat_test
 
 
 # Store production database in the storage/ directory, which by default
@@ -26,16 +26,16 @@ test:
 production:
   primary:
     <<: *default
-    database: storage/production.sqlite3
+    database: simple_chat_production
   cache:
     <<: *default
-    database: storage/production_cache.sqlite3
+    database: simple_chat_production_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *default
-    database: storage/production_queue.sqlite3
+    database: simple_chat_production_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *default
-    database: storage/production_cable.sqlite3
+    database: simple_chat_production_cable
     migrations_paths: db/cable_migrate
